# DeepStream-VLM

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
configs/: config_describe_scene_en.yaml  config_driving_scene.yaml  config_driving_scene_with_detect.yaml  config_infer_yolo26.txt  config_infer_yolo26e.txt  config_infer_yolo26e_seg.txt
plugin/: config_loader.py  gstnvvllmvlm.py  output_schema.py  vlm_utils.py
scripts/: download_model.py  export_yolo26.py  export_yoloe.py  export_yoloe_seg.py  gen_desc_visuals.py
src/: consumer.py  vllm_ds_app_kafka_publish.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: conftest.py  test_app_main_args.py  test_engine_autodetect.py  test_kafka_publisher.py  test_onnx_guard.py
tests/unit/: conftest.py  test_config_loader.py  test_consumer.py  test_download_model.py  test_vlm_utils.py
